--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .category-links {
+    @apply cursor-pointer transition duration-200 ease-in-out hover:text-blue-500;
+  }
+}
